--- a/cms-tos-gen/package.json
+++ b/cms-tos-gen/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.4",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
