--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.4",
-    "next": "13.4.5",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
