--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
